--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "build": "remix build",
     "dev": "remix dev",
     "start": "remix-serve build",
-    "typecheck": "tsc -b"
+    "typecheck": "tsc -b",
+    "updateDb": "npx prisma db push"
   },
   "dependencies": {
     "@prisma/client": "^4.8.0",
     "@remix-run/node": "^1.9.0",
     "@remix-run/react": "^1.9.0",
     "@remix-run/serve": "^1.9.0",
+    "bcryptjs": "^2.4.3",
     "isbot": "^3.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -22,6 +24,7 @@
   "devDependencies": {
     "@remix-run/dev": "^1.9.0",
     "@remix-run/eslint-config": "^1.9.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "esbuild-register": "^3.4.2",
